fixed spacing issue

--- a/static/scss/dashboard/course-progress-message.scss
+++ b/static/scss/dashboard/course-progress-message.scss
@@ -1,4 +1,6 @@
 .course-progress-message {
+  margin-bottom: 9px;
+
   .details {
     font-size: 14px;
     color: $meddarkgray;
