--- a/static/scss/dashboard/course-progress.scss
+++ b/static/scss/dashboard/course-progress.scss
@@ -6,7 +6,7 @@
   .number {
     font-size: 18pt;
     font-weight: 400;
-    margin-bottom: 15px;
+    margin-bottom: 11px;
 
     a {
       font-weight: 400;
